Version 0.5.0 Beta